--- a/menu_management/pubspec.yaml
+++ b/menu_management/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
