--- a/menu_management/pubspec.yaml
+++ b/menu_management/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^4.2.1
+  file_picker: ^6.1.1
 
 dev_dependencies:
   flutter_test:
