--- a/menu_management/analysis_options.yaml
+++ b/menu_management/analysis_options.yaml
@@ -21,8 +21,18 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    prefer_double_quotes: true
+    always_use_package_imports: true
+    avoid_relative_lib_imports: true
+    type_init_formals: true
+    type_annotate_public_apis: true
+    always_declare_return_types: true
+    avoid_types_as_parameter_names: true
+    test_types_in_equals: true
+    annotate_overrides: true
+    sort_unnamed_constructors_first: true
+    recursive_getters: true
+    use_build_context_synchronously: false # The context.mounted check is used where needed; this rule causes false positives
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
@@ -30,3 +40,9 @@ linter:
 analyzer:
   errors:
     invalid_annotation_target: ignore
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
+
+formatter:
+  page_width: 150
